fix spacing on in basic carousel controls from mobile to tablet

--- a/express/code/scripts/widgets/basic-carousel.css
+++ b/express/code/scripts/widgets/basic-carousel.css
@@ -47,7 +47,9 @@
 .basic-carousel-controls-wrapper {
   display: flex;
   justify-content: end;
+  padding-top: 0;
   padding-bottom: var(--spacing-700);
+  padding-right: var(--spacing-300);
   gap: var(--spacing-100);
 }
 
@@ -257,9 +259,8 @@
 
 @media (min-width: 768px) {
   .basic-carousel-controls-wrapper {
+    padding-top: var(--spacing-400);
     padding-bottom: var(--spacing-800);
-  }
-  .basic-carousel-container .basic-carousel-fader-right {
     padding-right: var(--spacing-500);
   }
 }
